--- a/index.html
+++ b/index.html
@@ -7,42 +7,60 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="all-mobile">
-        <div class="option-1">
-            <img id="close-button" src="images/food-close-x.webp" alt="close">
-            <div class="inner-container">
-                <img src="images/food-happy.webp" alt="happy">
-                <h2>Confirmation</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facilisis duis posuere accumsan, in ut vel iaculis fusce posuere.</p>
-                <div id="food-selection">
-                    <img src="images/Rectangle.webp" alt="burger">
-                    <div class="food-name-price">
-                        <h5>Big Mac Menu</h5>
-                        <h6>$29.99</h6>
-                    </div>
-                    <a href="#">Change</a>
-                </div>
-                <button id="ready-btn" >I'm Ready to Eat!</button>
-            </div>
-            <div class="dots-ctr">
-                <div class="dot"></div>
-                <div class="dot green"></div>
-                <div class="dot"></div>
-            </div>
+    <div class="option left">
+        <img id="close-button" src="images/food-close-x.webp" alt="close">
+        <div class="inner-container">
+            <img src="images/hamburger+1.webp" alt="burger">
+            <h2>Choose a dish</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facilisis duis posuere accumsan, in ut vel iaculis fusce posuere.</p>
+            <button id="inactive-btn" class="all-btn">Next →</button>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <div class="dots-ctr">
+            <div class="dot green"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+        </div>
     </div>
+
+
+    <div class="option middle">
+        <img id="close-button" src="images/food-close-x.webp" alt="close">
+        <div class="inner-container">
+            <img src="images/food-happy.webp" alt="happy">
+            <h2>Confirmation</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facilisis duis posuere accumsan, in ut vel iaculis fusce posuere.</p>
+            <div id="food-selection">
+                <img src="images/Rectangle.webp" alt="burger">
+                <div class="food-name-price">
+                    <h5>Big Mac Menu</h5>
+                    <h6>$29.99</h6>
+                </div>
+                <a href="#">Change</a>
+            </div>
+            <button id="ready-btn" class="all-btn" >I'm Ready to Eat!</button>
+        </div>
+        <div class="dots-ctr">
+            <div class="dot"></div>
+            <div class="dot green"></div>
+            <div class="dot"></div>
+        </div>
+    </div>
+
+
+    <div class="option right">
+        <img id="close-button" src="images/food-close-x.webp" alt="close">
+        <div class="inner-container">
+            <img src="images/delivery-man+1.webp" alt="delivery">
+            <h2>Your order process begins</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facilisis duis posuere accumsan, in ut vel iaculis fusce posuere.</p>
+            <button id="inactive-btn" class="all-btn">Track on the map</button>
+        </div>
+        <div class="dots-ctr">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot green"></div>
+        </div>
+    </div>
+
 </body>
 </html>
